[gd_scene load_steps=11 format=4 uid="uid://cgv6xansjm4u1"]

[ext_resource type="Script" uid="uid://d0yqeum6k8qon" path="res://level.gd" id="1_0b4ue"]
[ext_resource type="Texture2D" uid="uid://00v572ysjskf" path="res://chao_.png" id="1_u52ul"]
[ext_resource type="PackedScene" uid="uid://ce8qw3bejoad4" path="res://player.tscn" id="2_vonw3"]
[ext_resource type="PackedScene" uid="uid://byerflq6ehjw5" path="res://breakfast.tscn" id="4_0b4ue"]
[ext_resource type="Texture2D" uid="uid://bj1b6h4p6l5iq" path="res://Bread.png" id="5_n6hdu"]
[ext_resource type="Texture2D" uid="uid://dryrcwr38onku" path="res://cardboard.png" id="6_km5ld"]
[ext_resource type="Texture2D" uid="uid://dbf8a3imtam2m" path="res://money.png" id="7_n6hdu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vonw3"]
texture = ExtResource("1_u52ul")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
17:7/0 = 0
17:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
11:8/0 = 0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
12:8/0 = 0
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
17:8/0 = 0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
4:12/0 = 0
11:12/0 = 0
11:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.95689, -3.95689, 8, -8, 8, 8, -8, 8)
6:13/0 = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 3.6871, -3.14753, 8, 8, -8, 8)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
10:13/0 = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
11:13/0 = 0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
1:14/0 = 0
2:14/0 = 0
5:14/0 = 0
5:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -4.76626, 3.6871)
6:14/0 = 0
6:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 6.38498, -0.989223, 4.22668, 4.04682, 0.0899296, 6.02527, -8, 8)
9:14/0 = 0
9:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
10:14/0 = 0
10:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
11:14/0 = 0
11:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
5:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.84713, -8, 8, -8, 8, 8, 1.94186, 8)
6:15/0 = 0
6:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, 6.01739, -2.0058, 5.78816, -1.95712, -8)
7:15/0 = 0
7:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.43797, 8, 4.36863, 8, 8, -8, 8)
8:15/0 = 0
8:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.43797, 8, 4.36863, 8, 8, -8, 8)
9:15/0 = 0
10:15/0 = 0
13:15/0 = 0
14:15/0 = 0
17:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
5:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.89118, -8, 8, -8, 8, 0.171926, 1.66195, 0.286543)
6:16/0 = 0
6:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:16/0 = 0
7:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
8:16/0 = 0
8:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
4:17/0 = 0
5:17/0 = 0
13:17/0 = 0
14:17/0 = 0
3:19/0 = 0
3:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.74454, -8, -3.74454, -4.29928, 8, -4.1606, 8, -8)
4:19/0 = 0
4:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.81971, 8, -6.7051, 8, -8, -8, -8)
5:19/0 = 0
4:20/0 = 0
5:20/0 = 0
4:21/0 = 0
5:21/0 = 0
4:22/0 = 0
5:22/0 = 0
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:12/0 = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:10/0 = 0
1:10/0 = 0

[sub_resource type="TileSet" id="TileSet_oi3di"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vonw3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi3di"]
size = Vector2(2005, 23)

[node name="Level" type="Node2D"]
script = ExtResource("1_0b4ue")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 31)
tile_map_data = PackedByteArray("AAAAAAoAAAAJAAwAAAAAAAsAAAAJAA0AAAAAAAwAAAAJAA0AAAABAAoAAAAKAAwAAAABAAsAAAAKAA0AAAABAAwAAAAKAA0AAAACAAoAAAAKAAwAAAACAAsAAAAKAA0AAAACAAwAAAAKAA0AAAADAAoAAAAKAAwAAAADAAsAAAAKAA0AAAADAAwAAAAKAA0AAAAEAAoAAAAKAAwAAAAEAAsAAAAKAA0AAAAEAAwAAAAKAA0AAAAFAAoAAAAKAAwAAAAFAAsAAAAKAA0AAAAFAAwAAAAKAA0AAAAGAAoAAAAKAAwAAAAGAAsAAAAKAA0AAAAGAAwAAAAKAA0AAAAHAAoAAAAKAAwAAAAHAAsAAAAKAA0AAAAHAAwAAAAKAA0AAAAIAAoAAAAKAAwAAAAIAAsAAAAKAA0AAAAIAAwAAAAKAA0AAAAJAAoAAAAKAAwAAAAJAAsAAAAKAA0AAAAJAAwAAAAKAA0AAAAKAAoAAAAKAAwAAAAKAAsAAAAKAA0AAAAKAAwAAAAKAA0AAAALAAoAAAAKAAwAAAALAAsAAAAKAA0AAAALAAwAAAAKAA0AAAAMAAoAAAAKAAwAAAAMAAsAAAAKAA0AAAAMAAwAAAAKAA0AAAANAAoAAAAKAAwAAAANAAsAAAAKAA0AAAANAAwAAAAKAA0AAAAOAAoAAAAKAAwAAAAOAAsAAAAKAA0AAAAOAAwAAAAKAA0AAAAPAAoAAAAKAAwAAAAPAAsAAAAKAA0AAAAPAAwAAAAKAA0AAAAQAAoAAAAKAAwAAAAQAAsAAAAKAA0AAAAQAAwAAAAKAA0AAAARAAoAAAAKAAwAAAARAAsAAAAKAA0AAAARAAwAAAAKAA0AAAASAAoAAAAKAAwAAAASAAsAAAAKAA0AAAASAAwAAAAKAA0AAAATAAoAAAAKAAwAAAATAAwAAAAKAA0AAAATAAsAAAAKAA0AAAAUAAsAAAAKAA0AAAAVAAsAAAAKAA0AAAAWAAsAAAAKAA0AAAAXAAsAAAAKAA0AAAAYAAsAAAAKAA0AAAAZAAsAAAAKAA0AAAAaAAsAAAAKAA0AAAAUAAwAAAAKAA0AAAAVAAwAAAAKAA0AAAAWAAwAAAAKAA0AAAAXAAwAAAAKAA0AAAAYAAwAAAAKAA0AAAAZAAwAAAAKAA0AAAAaAAwAAAAKAA0AAAAUAAoAAAAKAAwAAAAVAAoAAAAKAAwAAAAWAAoAAAAKAAwAAAAXAAoAAAAKAAwAAAAYAAoAAAAKAAwAAAAZAAoAAAAKAAwAAAAaAAoAAAAKAAwAAAD//wgAAAAOAAcAAAD//wkAAAAOAAgAAAAAAAgAAAAPAAcAAAAAAAkAAAAPAAgAAAD//wYAAAAOAAcAAAD//wcAAAAOAAgAAAAAAAYAAAAPAAcAAAAAAAcAAAAPAAgAAAD//wQAAAAOAAcAAAD//wUAAAAOAAgAAAAAAAQAAAAPAAcAAAAAAAUAAAAPAAgAAAAHAAkAAAAJAAcAAAAIAAkAAAAKAAcAAAAJAAgAAAAJAAcAAAAKAAgAAAAKAAcAAAAJAAkAAAAJAAcAAAAKAAkAAAAKAAcAAAALAAcAAAAJAAcAAAAMAAcAAAAKAAcAAAALAAgAAAAJAAcAAAAMAAgAAAAKAAcAAAALAAkAAAAJAAcAAAAMAAkAAAAKAAcAAAANAAcAAAALAAcAAAANAAgAAAALAAcAAAANAAkAAAALAAcAAAAOAAcAAAAMAAcAAAAOAAgAAAAMAAcAAAAOAAkAAAAMAAcAAAAQAAYAAAADABMAAAARAAYAAAAEABMAAAARAAcAAAAEABQAAAAUAAYAAAAFAA0AAAAUAAcAAAAFAA4AAAAUAAgAAAAFAA8AAAAUAAkAAAAFABAAAAAVAAYAAAAGAA0AAAAVAAcAAAAGAA4AAAAVAAgAAAAGAA8AAAAVAAkAAAAGABAAAAAWAAkAAAAGAA8AAAASAAYAAAAFABMAAAASAAcAAAAFABQAAAASAAgAAAAFABUAAAASAAkAAAAFABYAAAAAAA0AAAAJAA0AAAAAAA4AAAAJAA4AAAABAA4AAAAKAA4AAAACAA4AAAAKAA4AAAADAA4AAAAKAA4AAAAEAA4AAAAKAA4AAAAFAA4AAAAKAA4AAAAGAA4AAAAKAA4AAAAHAA4AAAAKAA4AAAAIAA4AAAAKAA4AAAAJAA4AAAAKAA4AAAAKAA4AAAAKAA4AAAALAA4AAAAKAA4AAAAMAA4AAAAKAA4AAAANAA4AAAAKAA4AAAAOAA4AAAAKAA4AAAAPAA4AAAAKAA4AAAAQAA4AAAAKAA4AAAARAA4AAAAKAA4AAAASAA4AAAAKAA4AAAATAA4AAAAKAA4AAAAUAA4AAAAKAA4AAAAVAA4AAAAKAA4AAAAWAA4AAAAKAA4AAAAXAA4AAAAKAA4AAAAYAA4AAAAKAA4AAAAZAA4AAAAKAA0AAAAaAA4AAAAKAA0AAAAaAA0AAAAKAA0AAAAZAA0AAAAKAA0AAAAYAA0AAAAKAA0AAAAXAA0AAAAKAA0AAAAWAA0AAAAKAA0AAAAVAA0AAAAKAA0AAAAUAA0AAAAKAA0AAAATAA0AAAAKAA0AAAASAA0AAAAKAA0AAAARAA0AAAAKAA0AAAAQAA0AAAAKAA0AAAAPAA0AAAAKAA0AAAAOAA0AAAAKAA0AAAANAA0AAAAKAA0AAAAMAA0AAAAKAA0AAAALAA0AAAAKAA0AAAAKAA0AAAAKAA0AAAAJAA0AAAAKAA0AAAAIAA0AAAAKAA0AAAAHAA0AAAAKAA0AAAAGAA0AAAAKAA0AAAAFAA0AAAAKAA0AAAAEAA0AAAAKAA0AAAADAA0AAAAKAA0AAAACAA0AAAAKAA0AAAABAA0AAAAKAA0AAAARAAgAAAAEABUAAAAPAAgAAAAMAAcAAAABAAkAAAABAAoAAAACAAkAAAACAAoAAAADAAkAAAAFAAQAAAAEAAkAAAAGAAQAAAAQAAkAAAAMAAcAAAAGAAkAAAACAAoAAAAFAAkAAAADAAoAAAAYAAcAAAAOAAcAAAAYAAgAAAAOAAgAAAAZAAcAAAAPAAcAAAAZAAgAAAAPAAgAAAAaAAcAAAAOAAcAAAAaAAgAAAAOAAgAAAAbAAcAAAAPAAcAAAAbAAgAAAAPAAgAAAAYAAkAAAAOAAcAAAAZAAkAAAAPAAcAAAAaAAkAAAAOAAcAAAAbAAkAAAAPAAcAAAAPAAkAAAAMAAcAAAAbAAoAAAAKAAwAAAAbAAsAAAAKAA0AAAAbAAwAAAAKAA0AAAAbAA0AAAAKAA0AAAAbAA4AAAAKAA4AAAAcAAoAAAAKAAwAAAAcAAsAAAAKAA0AAAAcAAwAAAAKAA0AAAAcAA0AAAAKAA0AAAAcAA4AAAAKAA4AAAAdAAoAAAAKAAwAAAAdAAsAAAAKAA0AAAAdAAwAAAAKAA0AAAAdAA0AAAAKAA0AAAAdAA4AAAAKAA4AAAAeAAoAAAAKAAwAAAAeAAsAAAAKAA0AAAAeAAwAAAAKAA0AAAAeAA0AAAAKAA0AAAAeAA4AAAAKAA4AAAAfAAoAAAAKAAwAAAAfAAsAAAAKAA0AAAAfAAwAAAAKAA0AAAAfAA0AAAAKAA0AAAAfAA4AAAAKAA4AAAAgAAoAAAAKAAwAAAAgAAsAAAAKAA0AAAAgAAwAAAAKAA0AAAAgAA0AAAAKAA0AAAAgAA4AAAAKAA4AAAAmAAoAAAAKAAwAAAAmAAsAAAAKAA0AAAAmAAwAAAAKAA0AAAAmAA0AAAAKAA0AAAAmAA4AAAAKAA4AAAAnAAoAAAAKAAwAAAAnAAsAAAAKAA0AAAAnAAwAAAAKAA0AAAAnAA0AAAAKAA0AAAAnAA4AAAAKAA4AAAAoAAoAAAAKAAwAAAAoAAsAAAAKAA0AAAAoAAwAAAAKAA0AAAAoAA0AAAAKAA0AAAAoAA4AAAAKAA4AAAApAAoAAAAKAAwAAAApAAsAAAAKAA0AAAApAAwAAAAKAA0AAAApAA0AAAAKAA0AAAApAA4AAAAKAA4AAAAqAAoAAAAKAAwAAAAqAAsAAAAKAA0AAAAqAAwAAAAKAA0AAAAqAA0AAAAKAA0AAAAqAA4AAAAKAA4AAAArAAoAAAAKAAwAAAArAAsAAAAKAA0AAAArAAwAAAAKAA0AAAArAA0AAAAKAA0AAAArAA4AAAAKAA4AAAAsAAoAAAAKAAwAAAAsAAsAAAAKAA0AAAAsAAwAAAAKAA0AAAAsAA0AAAAKAA0AAAAsAA4AAAAKAA4AAAAtAAoAAAAKAAwAAAAtAAsAAAAKAA0AAAAtAAwAAAAKAA0AAAAtAA0AAAAKAA0AAAAtAA4AAAAKAA4AAAAuAAoAAAAKAAwAAAAuAAsAAAAKAA0AAAAuAAwAAAAKAA0AAAAuAA0AAAAKAA0AAAAuAA4AAAAKAA4AAAAvAAoAAAAKAAwAAAAvAAsAAAAKAA0AAAAvAAwAAAAKAA0AAAAvAA0AAAAKAA0AAAAvAA4AAAAKAA4AAAAwAAoAAAAKAAwAAAAwAAsAAAAKAA0AAAAwAAwAAAAKAA0AAAAwAA0AAAAKAA0AAAAwAA4AAAAKAA4AAAAxAAoAAAAKAAwAAAAxAAsAAAAKAA0AAAAxAAwAAAAKAA0AAAAxAA0AAAAKAA0AAAAxAA4AAAAKAA4AAAAyAAoAAAAKAAwAAAAyAAsAAAAKAA0AAAAyAAwAAAAKAA0AAAAyAA0AAAAKAA0AAAAyAA4AAAAKAA4AAAAzAAoAAAAKAAwAAAAzAAsAAAAKAA0AAAAzAAwAAAAKAA0AAAAzAA0AAAAKAA0AAAAzAA4AAAAKAA0AAAA0AAoAAAAKAAwAAAA0AAsAAAAKAA0AAAA0AAwAAAAKAA0AAAA0AA0AAAAKAA0AAAA0AA4AAAAKAA0AAAA1AAoAAAAKAAwAAAA1AAsAAAAKAA0AAAA1AAwAAAAKAA0AAAA1AA0AAAAKAA0AAAA1AA4AAAAKAA4AAAA2AAoAAAAKAAwAAAA2AAsAAAAKAA0AAAA2AAwAAAAKAA0AAAA2AA0AAAAKAA0AAAA2AA4AAAAKAA4AAAA3AAoAAAAKAAwAAAA3AAsAAAAKAA0AAAA3AAwAAAAKAA0AAAA3AA0AAAAKAA0AAAA3AA4AAAAKAA4AAAA4AAoAAAAKAAwAAAA4AAsAAAAKAA0AAAA4AAwAAAAKAA0AAAA4AA0AAAAKAA0AAAA4AA4AAAAKAA4AAAA5AAoAAAAKAAwAAAA5AAsAAAAKAA0AAAA5AAwAAAAKAA0AAAA5AA0AAAAKAA0AAAA5AA4AAAAKAA4AAAA6AAoAAAAKAAwAAAA6AAsAAAAKAA0AAAA6AAwAAAAKAA0AAAA6AA0AAAAKAA0AAAA6AA4AAAAKAA4AAAA7AAoAAAAKAAwAAAA7AAsAAAAKAA0AAAA7AAwAAAAKAA0AAAA7AA0AAAAKAA0AAAA7AA4AAAAKAA4AAAA8AAoAAAAKAAwAAAA8AAsAAAAKAA0AAAA8AAwAAAAKAA0AAAA8AA0AAAAKAA0AAAA8AA4AAAAKAA4AAAA9AAoAAAAKAAwAAAA9AAsAAAAKAA0AAAA9AAwAAAAKAA0AAAA9AA0AAAAKAA0AAAA9AA4AAAAKAA4AAAA+AAoAAAAKAAwAAAA+AAsAAAAKAA0AAAA+AAwAAAAKAA0AAAA+AA0AAAAKAA0AAAA+AA4AAAAKAA4AAAA/AAoAAAAKAAwAAAA/AAsAAAAKAA0AAAA/AAwAAAAKAA0AAAA/AA0AAAAKAA0AAAA/AA4AAAAKAA4AAABAAAoAAAAKAAwAAABAAAsAAAAKAA0AAABAAAwAAAAKAA0AAABAAA0AAAAKAA0AAABAAA4AAAAKAA4AAABBAAoAAAAKAAwAAABBAAsAAAAKAA0AAABBAAwAAAAKAA0AAABBAA0AAAAKAA0AAABBAA4AAAAKAA4AAABCAAoAAAAKAAwAAABCAAsAAAAKAA0AAABCAAwAAAAKAA0AAABCAA0AAAAKAA0AAABCAA4AAAAKAA4AAABDAAoAAAAKAAwAAABDAAsAAAAKAA0AAABDAAwAAAAKAA0AAABDAA0AAAAKAA0AAABDAA4AAAAKAA4AAABEAAoAAAAKAAwAAABEAAsAAAAKAA0AAABEAAwAAAAKAA0AAABEAA0AAAAKAA0AAABEAA4AAAAKAA4AAABFAAoAAAAKAAwAAABFAAsAAAAKAA0AAABFAAwAAAAKAA0AAABFAA0AAAAKAA0AAABFAA4AAAAKAA4AAABGAAoAAAAKAAwAAABGAAsAAAAKAA0AAABGAAwAAAAKAA0AAABGAA0AAAAKAA0AAABGAA4AAAAKAA4AAABHAAoAAAAKAAwAAABHAAsAAAAKAA0AAABHAAwAAAAKAA0AAABHAA0AAAAKAA0AAABHAA4AAAAKAA4AAABIAAoAAAAKAAwAAABIAAsAAAAKAA0AAABIAAwAAAAKAA0AAABIAA0AAAAKAA0AAABIAA4AAAAKAA4AAABJAAoAAAAKAAwAAABJAAsAAAAKAA0AAABJAAwAAAAKAA0AAABJAA0AAAAKAA0AAABJAA4AAAAKAA4AAABKAAoAAAAKAAwAAABKAAsAAAAKAA0AAABKAAwAAAAKAA0AAABKAA0AAAAKAA0AAABKAA4AAAAKAA4AAABLAAoAAAAKAAwAAABLAAsAAAAKAA0AAABLAAwAAAAKAA0AAABLAA0AAAAKAA0AAABLAA4AAAAKAA4AAABMAAoAAAAKAAwAAABMAAsAAAAKAA0AAABMAAwAAAAKAA0AAABMAA0AAAAKAA0AAABMAA4AAAAKAA4AAABNAAoAAAAKAAwAAABNAAsAAAAKAA0AAABNAAwAAAAKAA0AAABNAA0AAAAKAA0AAABNAA4AAAAKAA0AAABOAAoAAAAKAAwAAABOAAsAAAAKAA0AAABOAAwAAAAKAA0AAABOAA0AAAAKAA0AAABOAA4AAAAKAA0AAABPAAoAAAAKAAwAAABPAAsAAAAKAA0AAABPAAwAAAAKAA0AAABPAA0AAAAKAA0AAABPAA4AAAAKAA4AAABQAAoAAAAKAAwAAABQAAsAAAAKAA0AAABQAAwAAAAKAA0AAABQAA0AAAAKAA0AAABQAA4AAAAKAA4AAABRAAoAAAAKAAwAAABRAAsAAAAKAA0AAABRAAwAAAAKAA0AAABRAA0AAAAKAA0AAABRAA4AAAAKAA4AAABSAAoAAAAKAAwAAABSAAsAAAAKAA0AAABSAAwAAAAKAA0AAABSAA0AAAAKAA0AAABSAA4AAAAKAA4AAABTAAoAAAAKAAwAAABTAAsAAAAKAA0AAABTAAwAAAAKAA0AAABTAA0AAAAKAA0AAABTAA4AAAAKAA4AAABUAAoAAAAKAAwAAABUAAsAAAAKAA0AAABUAAwAAAAKAA0AAABUAA0AAAAKAA0AAABUAA4AAAAKAA4AAABVAAoAAAAKAAwAAABVAAsAAAAKAA0AAABVAAwAAAAKAA0AAABVAA0AAAAKAA0AAABVAA4AAAAKAA4AAABWAAoAAAAKAAwAAABWAAsAAAAKAA0AAABWAAwAAAAKAA0AAABWAA0AAAAKAA0AAABWAA4AAAAKAA4AAABXAAoAAAAKAAwAAABXAAsAAAAKAA0AAABXAAwAAAAKAA0AAABXAA0AAAAKAA0AAABXAA4AAAAKAA4AAABYAAoAAAAKAAwAAABYAAsAAAAKAA0AAABYAAwAAAAKAA0AAABYAA0AAAAKAA0AAABYAA4AAAAKAA4AAABZAAoAAAAKAAwAAABZAAsAAAAKAA0AAABZAAwAAAAKAA0AAABZAA0AAAAKAA0AAABZAA4AAAAKAA4AAABaAAoAAAAKAAwAAABaAAsAAAAKAA0AAABaAAwAAAAKAA0AAABaAA0AAAAKAA0AAABaAA4AAAAKAA4AAABbAAoAAAAKAAwAAABbAAsAAAAKAA0AAABbAAwAAAAKAA0AAABbAA0AAAAKAA0AAABbAA4AAAAKAA4AAABcAAoAAAAKAAwAAABcAAsAAAAKAA0AAABcAAwAAAAKAA0AAABcAA0AAAAKAA0AAABcAA4AAAAKAA4AAABdAAoAAAAKAAwAAABdAAsAAAAKAA0AAABdAAwAAAAKAA0AAABdAA0AAAAKAA0AAABdAA4AAAAKAA4AAABeAAoAAAAKAAwAAABeAAsAAAAKAA0AAABeAAwAAAAKAA0AAABeAA0AAAAKAA0AAABeAA4AAAAKAA4AAABfAAoAAAAKAAwAAABfAAsAAAAKAA0AAABfAAwAAAAKAA0AAABfAA0AAAAKAA0AAABfAA4AAAAKAA4AAABgAAoAAAAKAAwAAABgAAsAAAAKAA0AAABgAAwAAAAKAA0AAABgAA0AAAAKAA0AAABgAA4AAAAKAA4AAABhAAoAAAAKAAwAAABhAAsAAAAKAA0AAABhAAwAAAAKAA0AAABhAA0AAAAKAA0AAABhAA4AAAAKAA4AAABiAAoAAAAKAAwAAABiAAsAAAAKAA0AAABiAAwAAAAKAA0AAABiAA0AAAAKAA0AAABiAA4AAAAKAA4AAABjAAoAAAAKAAwAAABjAAsAAAAKAA0AAABjAAwAAAAKAA0AAABjAA0AAAAKAA0AAABjAA4AAAAKAA4AAABkAAoAAAAKAAwAAABkAAsAAAAKAA0AAABkAAwAAAAKAA0AAABkAA0AAAAKAA0AAABkAA4AAAAKAA4AAABlAAoAAAAKAAwAAABlAAsAAAAKAA0AAABlAAwAAAAKAA0AAABlAA0AAAAKAA0AAABlAA4AAAAKAA4AAABmAAoAAAAKAAwAAABmAAsAAAAKAA0AAABmAAwAAAAKAA0AAABmAA0AAAAKAA0AAABmAA4AAAAKAA4AAABnAAoAAAAKAAwAAABnAAsAAAAKAA0AAABnAAwAAAAKAA0AAABnAA0AAAAKAA0AAABnAA4AAAAKAA0AAABoAAoAAAAKAAwAAABoAAsAAAAKAA0AAABoAAwAAAAKAA0AAABoAA0AAAAKAA0AAABoAA4AAAAKAA0AAAAWAAgAAAAEAAoAAAAhAA0AAAAEAAwAAAAhAA4AAAAEAA0AAAAiAA0AAAAEAAwAAAAiAA4AAAAEAA0AAAAjAA0AAAAEAAwAAAAjAA4AAAAEAA0AAAAkAA0AAAAEAAwAAAAkAA4AAAAEAA0AAAAlAA0AAAAEAAwAAAAlAA4AAAAEAA0AAAA=")
tile_set = SubResource("TileSet_oi3di")

[node name="player" parent="TileMapLayer" instance=ExtResource("2_vonw3")]
position = Vector2(11, 133)

[node name="Camera2D" type="Camera2D" parent="TileMapLayer/player"]
limit_left = 0
limit_top = 0
limit_bottom = 270

[node name="breakfast" parent="TileMapLayer" instance=ExtResource("4_0b4ue")]
position = Vector2(405, 100)

[node name="Pitfall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pitfall"]
position = Vector2(1005, 259)
shape = SubResource("RectangleShape2D_oi3di")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ItemsContainer" type="HBoxContainer" parent="HUD"]
offset_left = 84.0
offset_top = -1.0
offset_right = 327.0
offset_bottom = 39.0

[node name="BreakfastIcon" type="TextureRect" parent="HUD/ItemsContainer"]
layout_mode = 2
texture = ExtResource("5_n6hdu")
stretch_mode = 3

[node name="BreakfastLabel" type="Label" parent="HUD/ItemsContainer"]
layout_mode = 2
text = "																																		0/1																																																																																												"

[node name="CardboardIcon" type="TextureRect" parent="HUD/ItemsContainer"]
layout_mode = 2
texture = ExtResource("6_km5ld")
stretch_mode = 3

[node name="CardboardLabel" type="Label" parent="HUD/ItemsContainer"]
layout_mode = 2
text = "0/1"

[node name="MoneyIcon" type="TextureRect" parent="HUD/ItemsContainer"]
layout_mode = 2
texture = ExtResource("7_n6hdu")
stretch_mode = 3

[node name="MoneyLabel" type="Label" parent="HUD/ItemsContainer"]
layout_mode = 2
text = "0/1"

[node name="TimeLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="body_entered" from="Pitfall" to="TileMapLayer/player" method="_on_pitfall_body_entered"]
